[package]
name = "netaudit-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-files = "0.6"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Templating
tera = "1.19"

# Environment variables
dotenv = "0.15"

# Process execution
tokio-process = "0.2"
regex = "1.10"

# Logging
env_logger = "0.10"
log = "0.4"

# Error handling
anyhow = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }